# Ravana

./: .gitignore  Dockerfile  Face Swap PRD.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run_log.txt  run_log_utf8.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py
configs/: default.yaml
demos/: __init__.py  cli.py  gui.py  webcam_demo.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
examples/: 01_basic_image_swap.py  02_video_swap.py  03_realtime_webcam.py  04_advanced_pipeline.py  05_custom_plugin.py  06_train_model.py
face_swap/: __init__.py  api.py  pipeline.py
face_swap/alignment/: __init__.py  aligner.py
face_swap/audio/: __init__.py  processor.py
face_swap/blending/: __init__.py  blender.py
face_swap/core/: __init__.py  config_loader.py  model_manager.py  model_router.py  profiler.py  quality.py  types.py
face_swap/detection/: __init__.py  async_detector.py  base.py  insightface_detector.py  retinaface.py
face_swap/embedding/: __init__.py  arcface.py  base.py
face_swap/enhancement/: __init__.py  enhancer.py
face_swap/filters/: __init__.py  ar_filters.py
face_swap/landmarks/: __init__.py  base.py  mediapipe_lm.py
face_swap/native/: CMakeLists.txt  __init__.py  bindings.py
face_swap/native/include/: face_swap.h
face_swap/native/src/: face_swap_c.cpp
face_swap/native/tests/: test_native.cpp
face_swap/optimization/: __init__.py  export.py  export_cli.py  runtime.py
face_swap/platform/: __init__.py  apple.py  mobile.py
face_swap/plugins/: __init__.py  registry.py
face_swap/swap/: __init__.py  base.py  inswapper.py  simswap.py
face_swap/temporal/: __init__.py  optical_flow.py  smoother.py
face_swap/training/: __init__.py  train_cli.py  trainer.py
face_swap/watermark/: __init__.py  watermarker.py
tests/: test_config.py  test_integration.py  test_model_manager.py  test_profiler.py  test_quality.py  test_types.py  test_watermark.py
